--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ html {
 body {
     box-sizing: border-box;
     margin: 5rem 0;
+    --font_size_medium: 1rem;
+    --font_size_small: 0.9rem;
 }
 
 /* Background */
@@ -92,4 +94,126 @@ nav a:nth-child(2) {
     box-shadow: 0 0 10px 5px white;   
     border: 1px solid white;
     font-weight: bold;
+}
+
+/* Section One */
+#section-one,
+#section-two {
+    border-radius: 20px;
+    border: 2px solid white;
+    padding: 0.7rem;
+}
+
+/* Information about Record */
+.upper {
+    display: flex;
+    gap: 2%;
+}
+
+article {
+    display: flex;
+    flex-direction: column;
+    max-width: 45vw;
+}
+
+h2 {
+    font-family: "Bungee-Outline";
+    font-size: 1.9rem;
+    line-height: 1;
+    margin: 0;
+}
+
+h3 {
+    margin: 0;
+    font-weight: bold;
+    font-size: 1.4rem;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+}
+
+ul li {
+    font-size: var(--font_size_medium);
+}
+
+article p {
+    font-size: var(--font_size_medium);
+    margin: 5rem 0 0 0;
+}
+
+/* Right Section / Album Cover */
+.right-section {
+    display: grid;
+    grid-template-columns: 15vw 15vw;
+    grid-template-rows: 15vw 15vw 15vw;
+    justify-content: center;
+    gap: 0.5rem;
+    flex-basis: 30rem;
+}
+
+#section-one .album, 
+#section-two .album{
+    position: relative;
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 2;
+}
+
+#section-one .album img, 
+#section-two .album img {
+    position: absolute;
+    border-radius: 20px 20px 0 0;
+    opacity: 1;
+    transition: opacity 0.7s ease-in-out;
+    height: 100%;
+}
+
+#section-one .album img:nth-child(2):hover,
+#section-two .album img:nth-child(2):hover {
+    opacity: 0;
+}
+
+.right-section p {
+    margin-left: 1rem;
+    font-size: var(--font_size_medium);
+    font-weight: bolder;
+    margin-bottom: 0.2rem;
+}
+
+.right-section ol {
+    padding: 0;
+    margin-left: 2rem;
+    margin-top: 0;
+}
+
+#section-one .right-section div:nth-child(2),
+#section-two .right-section div:nth-child(2) {
+    grid-column: 1;
+    grid-row: 3;
+    border-radius: 0 0 0 20px;
+    font-size: var(--font_size_small);
+    overflow: hidden;
+}
+
+#section-one .right-section div:nth-child(2),
+#section-one .right-section div:nth-child(3) {
+    background-color: rgb(238, 203, 0);
+    color: rgb(160, 12, 108);
+}
+
+#section-two .right-section div:nth-child(2),
+#section-two .right-section div:nth-child(3) {
+    background-color: rgb(52, 135, 216);
+    color: rgb(249, 214, 98)
+}
+
+
+#section-one .right-section div:nth-child(3),
+#section-two .right-section div:nth-child(3) {
+    grid-column: 2;
+    grid-row: 3 ;
+    border-radius: 0 0 20px 0;
+    font-size: var(--font_size_small);
+    overflow: hidden;
 }
