--- a/style.css
+++ b/style.css
@@ -208,7 +208,6 @@ article p {
     color: rgb(249, 214, 98)
 }
 
-
 #section-one .right-section div:nth-child(3),
 #section-two .right-section div:nth-child(3) {
     grid-column: 2;
@@ -216,4 +215,114 @@ article p {
     border-radius: 0 0 20px 0;
     font-size: var(--font_size_small);
     overflow: hidden;
+}
+
+/* Bottom-Section */
+.bottom-section {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    margin-top: 0.5rem;
+    column-gap: 0.3rem;
+}
+
+.bottom-section p {
+    font-size: var(--font_size_small);
+    margin: 0;
+}
+
+#section-one .bottom-section div:first-child, 
+#section-one .bottom-section div:nth-child(3), 
+#section-one .bottom-section div:nth-child(5) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(238, 203, 0);
+    background-color: rgb(160, 12, 108); 
+    padding: 2rem 1rem;
+}
+
+#section-one .bottom-section div:first-child {
+    grid-column: 1;
+    border-radius: 20px 0 20px 20px;
+}
+
+#section-one .bottom-section div:nth-child(3) {
+    grid-column: 3 / 5;
+    border-radius: 20px 20px 20px 0;
+}
+
+#section-one .bottom-section div:nth-child(4) {
+    background: url(../images/chas-chandler.jpg);
+    background-size: cover;
+    grid-column: 5;
+    border-radius: 0 20px 20px 20px;
+    display: flex;
+    align-items: flex-end;
+}
+
+#section-one .bottom-section div:nth-child(4) p {    
+    color: white;
+    margin-left: 0.6rem;
+    margin-bottom: 0.6rem;
+}
+
+#section-one .bottom-section div:nth-child(5) {
+    grid-column: 6;
+    border-radius: 20px 20px 0 20px;
+ }
+ 
+ /* Container Two */
+
+
+/* Bottom Section */
+#section-two .bottom-section div:first-child, 
+#section-two .bottom-section div:nth-child(2), 
+#section-two .bottom-section div:nth-child(4) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(68, 133, 221);
+    background-color: rgb(255, 255, 165); 
+    padding: 2rem 1rem;
+}
+
+#section-two .bottom-section div:first-child {
+    grid-column: 1 / 3;
+    grid-row: 1;
+    border-radius: 20px 20px 0 20px;
+}
+
+#section-two .bottom-section div:nth-child(2) {
+    grid-column: 3;
+    grid-row: 1;
+    border-radius: 0 20px 20px 20px;
+}
+
+#section-two .bottom-section div:nth-child(3) {
+    background: url(../images/studio.jpg);
+    background-size: cover;
+    background-position: top;
+    grid-column: 4 / span 2;
+    grid-row: 1;
+    border-radius: 0 20px 20px 20px;
+    display: flex;
+    align-items: flex-end;
+}
+
+#section-two .bottom-section div:nth-child(3) p {
+    margin-left: 0.6rem;
+    margin-bottom: 0.6rem;
+}
+
+#section-two .bottom-section div:nth-child(4){
+    grid-column: 6;
+    grid-row: 1;
+    border-radius: 20px 20px 0 20px;
+}
+
+/* Footer */
+footer {
+    font-size: var(--font_size_medium);
+    padding: 1vw 0;
+    margin-top: 8vh;
 }
