--- a/style.css
+++ b/style.css
@@ -326,3 +326,153 @@ footer {
     padding: 1vw 0;
     margin-top: 8vh;
 }
+
+/* Media Queries */
+
+@media (max-width: 500px) {
+    
+    body > div {
+        background: url(../images/background-phone.webp);
+        background-size: cover;
+        background-attachment: fixed;
+        background-position: center;
+    }
+
+    body {
+        margin: 0;
+        padding: 0;
+    }
+
+    main {
+        padding: 0 3vw;
+        width: auto;
+    }   
+
+    h1 {
+        text-align: center;
+        font-size: 14vw;
+        margin: 0;
+    }
+
+    nav {
+        gap: 1vw;
+        margin-bottom: 8vh;
+        margin-top: 6vh;
+    }
+
+    nav a {
+        font-size: 3.1vw;
+    }
+    
+    /* Upper Section */
+    .upper {
+        flex-direction: column-reverse;
+    }
+
+    .right-section {
+        grid-template-columns:  50% 50%;
+        grid-template-rows: 43vw 43vw 43vw;
+        gap: 1vw;
+        grid-row: 1;
+    }
+
+    .right-section p {
+        font-size: 4vw;
+    }
+
+    .right-section li {
+        font-size: 2.5vw;
+    }
+
+    h2 {
+        font-size: 7vw;
+        margin-top: 0;
+    }
+
+    h3 {
+        font-size: 3.5vw;
+    }
+
+    article p {
+        font-size: 3vw;
+        margin-top: 5vh;   
+    }
+
+    article li {
+        font-size: 3vw;
+    }
+      
+    /* Bottom Section */
+    .bottom-section {
+        grid-template-columns: repeat(3, 33%);
+        grid-template-rows: 25vh 25vh;
+        gap: 1vh;
+    }
+
+    .bottom-section p {
+        font-size: 2.8vw;
+        padding: 0 1vw;
+    }
+
+    #section-one .bottom-section div:first-child {
+        grid-column: 1;
+        grid-row: 1;
+        height: 100%;
+    }
+    
+    #section-one .bottom-section div:nth-child(3) {
+        grid-column: 2 / 4;
+        grid-row: 1;
+        height: 100%;
+    }
+    
+    #section-one .bottom-section div:nth-child(4) {
+        grid-column: 2 / 3;
+        grid-row: 2;
+        height: 100%;
+    }
+    
+    #section-one .bottom-section div:nth-child(5) {
+        grid-column: 3;
+        grid-row: 2;
+        height: 100%;
+     }
+
+     /* Section Two - Bottom Section */
+     #section-two .bottom-section div:first-child {
+        grid-column: 1 / 3;
+        grid-row: 1;
+        height: 100%;
+    }
+    
+    #section-two .bottom-section div:nth-child(2) {
+        grid-column: 3;
+        grid-row: 1;
+        height: 100%;
+    }
+    
+    #section-two .bottom-section div:nth-child(3) {
+        grid-column: 1 / span 2;
+        grid-row: 2;
+        height: 100%;
+    }
+    
+    #section-two .bottom-section div:nth-child(4){
+        grid-column: 3;
+        grid-row: 2;
+        height: 100%;
+    }
+
+    #section-two .bottom-section div:nth-child(3) p,
+    #section-one .bottom-section div:nth-child(4) p {
+        font-size: 3vw;
+    }
+
+    #section-two {
+        margin-bottom: 10vh;
+    }
+
+    footer {
+        font-size: 3vw;
+    }
+}
