--- a/style.css
+++ b/style.css
@@ -476,3 +476,26 @@ footer {
         font-size: 3vw;
     }
 }
+
+@media (min-width:800px) and (max-width: 900px) {
+    h1 {
+        font-size: 3.74rem;
+    }
+
+    h2 {
+        font-size: 1.5rem;
+    }
+
+    h3 {
+        font-size: 1rem;
+    }
+
+    nav a {
+        font-size: 0.9rem;
+    }
+
+    body {
+        --font_size_medium: 0.8rem;
+        --font_size_small: 0.65rem;
+        }
+}
