--- a/style.css
+++ b/style.css
@@ -209,13 +209,13 @@ article p {
 #section-two .right-section div:nth-child(2),
 #section-two .right-section div:nth-child(3) {
     background-color: rgb(52, 135, 216);
-    color: rgb(249, 214, 98)
+    color: rgb(255, 255, 165);
 }
 
 #section-one .right-section div:nth-child(3),
 #section-two .right-section div:nth-child(3) {
     grid-column: 2;
-    grid-row: 3 ;
+    grid-row: 3;
     border-radius: 0 0 20px 0;
     font-size: var(--font_size_small);
     overflow: hidden;
@@ -293,7 +293,7 @@ article p {
 #section-two .bottom-section div:first-child {
     grid-column: 1 / 3;
     grid-row: 1;
-    border-radius: 20px 20px 0 20px;
+    border-radius: 20px 20px 20px 0;
 }
 
 #section-two .bottom-section div:nth-child(2) {
