--- a/style.css
+++ b/style.css
@@ -345,6 +345,8 @@ footer {
     body {
         margin: 0;
         padding: 0;
+        --font_size_medium: 3vw;
+        --font_size_small: 2.8vw;
     }
 
     main {
@@ -380,14 +382,6 @@ footer {
         grid-row: 1;
     }
 
-    .right-section p {
-        font-size: 4vw;
-    }
-
-    .right-section li {
-        font-size: 2.5vw;
-    }
-
     h2 {
         font-size: 7vw;
         margin-top: 0;
@@ -397,15 +391,7 @@ footer {
         font-size: 3.5vw;
     }
 
-    article p {
-        font-size: 3vw;
-        margin-top: 5vh;   
-    }
-
-    article li {
-        font-size: 3vw;
-    }
-      
+ 
     /* Bottom Section */
     .bottom-section {
         grid-template-columns: repeat(3, 33%);
