--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 html {
     font-family: helvetica;
-    color: rgb(230, 230, 230);
+    color: rgb(220, 220, 220);
 }
 
 body {
@@ -24,7 +24,6 @@ body {
     --pointBottomRight: 20px 20px 20px 0;
 }
 
-/* Background */
 body > div {
     background: url(../Images/background.jpg);
     background-size: cover;
@@ -37,12 +36,10 @@ body > div {
     width: 100%;
 }
 
-/* All Images */
 img {
     width: 100%;
 }
 
-/* Total Container*/
 main {
     padding: 0 1.2rem;
     background-color: rgba(0, 0, 0, 0.4);
@@ -78,7 +75,6 @@ nav a {
     text-decoration: none;
     padding: 1rem 2rem;
     border-radius: 10px;
-    font-family: helvetica;
     font-weight: 100;
     font-size: 1.4rem;
     text-align: center;
@@ -100,7 +96,6 @@ nav a:nth-child(2) {
     font-weight: bold;
 }
 
-/* Section One */
 #section-one,
 #section-two {
     border-radius: 20px;
@@ -228,72 +223,76 @@ article p {
     margin: 0;
 }
 
-#section-one .bottom-section div:first-child, 
-#section-one .bottom-section div:nth-child(3), 
-#section-one .bottom-section div:nth-child(5) {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#section-one .bottom-section div {
     color: rgb(238, 203, 0);
     background-color: rgb(160, 12, 108); 
-    padding: 2rem 1rem;
 }
 
-#section-one .bottom-section div:first-child {
-    grid-column: 1;
-    border-radius: 20px 0 20px 20px;
+#section-one .bottom-section div:nth-child(2) {
+    display: none;
 }
 
-#section-one .bottom-section div:nth-child(3) {
-    grid-column: 3 / 5;
-    border-radius: 20px 20px 20px 0;
-}
-
-#section-one .bottom-section div:nth-child(4) {
-    background: url(./Images/chas-chandler.jpg);
-    background-size: cover;
-    grid-column: 5;
-    border-radius: 0 20px 20px 20px;
-    display: flex;
-    align-items: flex-end;
-}
-
-#section-one .bottom-section div:nth-child(4) p {    
-    color: white;
-    margin-left: 0.6rem;
-    margin-bottom: 0.6rem;
-}
-
-#section-one .bottom-section div:nth-child(5) {
-    grid-column: 6;
-    border-radius: 20px 20px 0 20px;
- }
- 
- /* Container Two */
-
-
-/* Bottom Section */
+#section-one .bottom-section div:first-child, 
+#section-one .bottom-section div:nth-child(3), 
+#section-one .bottom-section div:nth-child(5),
 #section-two .bottom-section div:first-child, 
 #section-two .bottom-section div:nth-child(2), 
 #section-two .bottom-section div:nth-child(4) {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 2rem 1rem;
+}
+
+#section-one .bottom-section div:first-child {
+    grid-column: 1;
+    border-radius: var(--pointTopRight);
+}
+
+#section-one .bottom-section div:nth-child(3) {
+    grid-column: 3 / 5;
+    border-radius: var(--pointBottomLeft);
+}
+
+#section-one .bottom-section div:nth-child(4) {
+    background: url(./Images/chas-chandler.jpg);
+    background-size: cover;
+    grid-column: 5;
+    color: white;
+}
+
+#section-one .bottom-section div:nth-child(4),
+#section-two .bottom-section div:nth-child(3) {
+    color: white;
+    border-radius: var(--pointTopLeft);
+    display: flex;
+    align-items: flex-end;
+}
+
+#section-one .bottom-section div:nth-child(4) p,
+#section-two .bottom-section div:nth-child(3) p {    
+    margin-left: 0.6rem;
+    margin-bottom: 0.6rem;
+}
+
+#section-one .bottom-section div:nth-child(5) {
+    grid-column: 6;
+    border-radius: var(--pointBottomRight);
+ }
+ 
+#section-two .bottom-section div {
     color: rgb(68, 133, 221);
     background-color: rgb(255, 255, 165); 
-    padding: 2rem 1rem;
 }
 
 #section-two .bottom-section div:first-child {
     grid-column: 1 / 3;
-    grid-row: 1;
-    border-radius: 20px 20px 20px 0;
+    border-radius: var(--pointBottomLeft);
 }
 
 #section-two .bottom-section div:nth-child(2) {
     grid-column: 3;
-    grid-row: 1;
-    border-radius: 0 20px 20px 20px;
+    border-radius: var(--pointTopLeft);
 }
 
 #section-two .bottom-section div:nth-child(3) {
@@ -301,28 +300,18 @@ article p {
     background-size: cover;
     background-position: top;
     grid-column: 4 / span 2;
-    grid-row: 1;
-    border-radius: 0 20px 20px 20px;
-    display: flex;
-    align-items: flex-end;
-}
-
-#section-two .bottom-section div:nth-child(3) p {
-    margin-left: 0.6rem;
-    margin-bottom: 0.6rem;
 }
 
 #section-two .bottom-section div:nth-child(4){
     grid-column: 6;
-    grid-row: 1;
-    border-radius: 20px 20px 0 20px;
+    border-radius: var(--pointBottomRight);
 }
 
 /* Footer */
 footer {
     font-size: var(--font_size_medium);
-    padding: 1vw 0;
-    margin-top: 8vh;
+    padding: 1rem 0;
+    margin-top: 1rem;
 }
 
 /* Media Queries */
