--- a/style.css
+++ b/style.css
@@ -31,9 +31,8 @@ body > div {
     background-position: center;
     background-repeat: no-repeat;
     position: fixed;
-    inset: 0 0 0 0;
+    inset: 0;
     z-index: -1;
-    width: 100%;
 }
 
 img {
@@ -53,9 +52,8 @@ main {
 
 h1 {
     font-family: "Bungee-Shade";
-    font-weight: bold;
     font-size: 4.95rem;
-    margin: 0 0 2.5rem 0;
+    margin: 0 0 2.2rem 0;
     padding-top: 1rem;
     line-height: 1.2;
 }
@@ -103,7 +101,7 @@ nav a:nth-child(2) {
     padding: 0.7rem;
 }
 
-/* Information about Record */
+/* Upper Section */
 .upper {
     display: flex;
     gap: 2%;
@@ -112,7 +110,6 @@ nav a:nth-child(2) {
 article {
     display: flex;
     flex-direction: column;
-    max-width: 45vw;
 }
 
 h2 {
@@ -142,7 +139,6 @@ article p {
     margin: 3rem 0 0 0;
 }
 
-/* Right Section / Album Cover */
 .right-section {
     display: grid;
     grid-template-columns: 15vw 15vw;
@@ -150,15 +146,13 @@ article p {
     gap: 0.5rem;
 }
 
-#section-one .album, 
-#section-two .album{
+.album {
     position: relative;
     grid-column: 1 / span 2;
     grid-row: 1 / span 2;
 }
 
-#section-one .album img, 
-#section-two .album img {
+.album img {
     position: absolute;
     border-radius: 20px 20px 0 0;
     opacity: 1;
@@ -166,8 +160,7 @@ article p {
     height: 100%;
 }
 
-#section-one .album img:nth-child(2):hover,
-#section-two .album img:nth-child(2):hover {
+.album img:nth-child(2):hover {
     opacity: 0;
 }
 
@@ -184,9 +177,14 @@ article p {
     margin-top: 0;
 }
 
-#section-one .right-section div:nth-child(2),
-#section-two .right-section div:nth-child(2) {
+.right-section div:nth-child(2) {
     border-radius: 0 0 0 20px;
+    font-size: var(--font_size_small);
+    overflow: hidden;
+}
+
+.right-section div:nth-child(3) {
+    border-radius: 0 0 20px 0;
     font-size: var(--font_size_small);
     overflow: hidden;
 }
@@ -203,14 +201,7 @@ article p {
     color: rgb(255, 255, 165);
 }
 
-#section-one .right-section div:nth-child(3),
-#section-two .right-section div:nth-child(3) {
-    border-radius: 0 0 20px 0;
-    font-size: var(--font_size_small);
-    overflow: hidden;
-}
-
-/* Bottom-Section */
+/*  Bottom-Section  */
 .bottom-section {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
@@ -223,21 +214,14 @@ article p {
     margin: 0;
 }
 
-#section-one .bottom-section div {
+#section-one .bottom-section div:nth-child(1),
+#section-one .bottom-section div:nth-child(3), 
+#section-one .bottom-section div:nth-child(5)  {
     color: rgb(238, 203, 0);
     background-color: rgb(160, 12, 108); 
 }
 
-#section-one .bottom-section div:nth-child(2) {
-    display: none;
-}
-
-#section-one .bottom-section div:first-child, 
-#section-one .bottom-section div:nth-child(3), 
-#section-one .bottom-section div:nth-child(5),
-#section-two .bottom-section div:first-child, 
-#section-two .bottom-section div:nth-child(2), 
-#section-two .bottom-section div:nth-child(4) {
+.bottom-section div {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -245,7 +229,6 @@ article p {
 }
 
 #section-one .bottom-section div:first-child {
-    grid-column: 1;
     border-radius: var(--pointTopRight);
 }
 
@@ -257,26 +240,20 @@ article p {
 #section-one .bottom-section div:nth-child(4) {
     background: url(./Images/chas-chandler.jpg);
     background-size: cover;
-    grid-column: 5;
     color: white;
 }
 
-#section-one .bottom-section div:nth-child(4),
-#section-two .bottom-section div:nth-child(3) {
+#section-one .bottom-section div:nth-child(4) ,
+#section-two .bottom-section div:nth-child(3)  {
     color: white;
     border-radius: var(--pointTopLeft);
     display: flex;
     align-items: flex-end;
+    padding: 0.6rem 0.6rem;
 }
 
-#section-one .bottom-section div:nth-child(4) p,
-#section-two .bottom-section div:nth-child(3) p {    
-    margin-left: 0.6rem;
-    margin-bottom: 0.6rem;
-}
-
-#section-one .bottom-section div:nth-child(5) {
-    grid-column: 6;
+#section-one .bottom-section div:nth-child(5),
+#section-two .bottom-section div:nth-child(4) {
     border-radius: var(--pointBottomRight);
  }
  
@@ -291,7 +268,6 @@ article p {
 }
 
 #section-two .bottom-section div:nth-child(2) {
-    grid-column: 3;
     border-radius: var(--pointTopLeft);
 }
 
@@ -300,11 +276,6 @@ article p {
     background-size: cover;
     background-position: top;
     grid-column: 4 / span 2;
-}
-
-#section-two .bottom-section div:nth-child(4){
-    grid-column: 6;
-    border-radius: var(--pointBottomRight);
 }
 
 /* Footer */
@@ -327,7 +298,7 @@ footer {
 
     body {
         --font_size_medium: 3.5vw;
-        --font_size_small: 3.2vw;
+        --font_size_small: 2.8vw;
     }
 
     main {
