--- a/style.css
+++ b/style.css
@@ -10,14 +10,13 @@
 
 html {
     font-family: helvetica;
-    color: rgb(220, 220, 220);
+    color: rgb(225, 225, 225);
 }
 
 body {
     box-sizing: border-box;
     margin: 4rem 0;
-    --font_size_medium: 0.9rem;
-    --font_size_small: 0.8rem;
+    --font_size: 1rem;
     --pointTopLeft: 0 20px 20px 20px;
     --pointTopRight: 20px 0 20px 20px;
     --pointBottomLeft: 20px 20px 0 20px;
@@ -52,7 +51,7 @@ main {
 
 h1 {
     font-family: "Bungee-Shade";
-    font-size: 4.95rem;
+    font-size: calc(4.95 * var(--font_size));
     margin: 0 0 2.2rem 0;
     padding-top: 1rem;
     line-height: 1.2;
@@ -73,23 +72,19 @@ nav a {
     text-decoration: none;
     padding: 1rem 2rem;
     border-radius: 10px;
-    font-weight: 100;
-    font-size: 1.4rem;
+    font-size: calc(1.4 * var(--font_size));
     text-align: center;
 }
 
-nav a:hover {
+nav a:nth-child(1):hover,
+nav a:nth-child(3):hover,
+nav a:nth-child(4):hover {
     background-color: rgba(0, 0, 0, 0.329);
     color: white;
 }
 
-nav a:nth-child(2):hover {
-    color: black;
-    background-color: rgba(255, 255, 255, 0.45);
-}
-
 nav a:nth-child(2) {
-    box-shadow: 0 0 10px 5px white;   
+    box-shadow: 0 0 6px 3px rgb(225, 225, 225);   
     border: 1px solid white;
     font-weight: bold;
 }
@@ -115,14 +110,14 @@ article {
 h2 {
     font-family: "Bungee-Outline";
     font-size: 1.9rem;
-    line-height: 1;
+    line-height: 1.4;
     margin: 0;
 }
 
 h3 {
     margin: 0;
     font-weight: bold;
-    font-size: 1.4rem;
+    font-size: calc(1.4 * var(--font_size));
 }
 
 ul {
@@ -131,11 +126,11 @@ ul {
 }
 
 ul li {
-    font-size: var(--font_size_medium);
+    font-size: calc(0.9 * var(--font_size));
 }
 
 article p {
-    font-size: var(--font_size_medium);
+    font-size: calc(0.9 * var(--font_size));
     margin: 3rem 0 0 0;
 }
 
@@ -166,7 +161,7 @@ article p {
 
 .right-section p {
     margin-left: 1rem;
-    font-size: var(--font_size_medium);
+    font-size: calc(0.9 * var(--font_size));
     font-weight: bolder;
     margin-bottom: 0.2rem;
 }
@@ -179,13 +174,13 @@ article p {
 
 .right-section div:nth-child(2) {
     border-radius: 0 0 0 20px;
-    font-size: var(--font_size_small);
+    font-size: calc(0.8 * var(--font_size));
     overflow: hidden;
 }
 
 .right-section div:nth-child(3) {
     border-radius: 0 0 20px 0;
-    font-size: var(--font_size_small);
+    font-size: calc(0.8 * var(--font_size));
     overflow: hidden;
 }
 
@@ -210,7 +205,7 @@ article p {
 }
 
 .bottom-section p {
-    font-size: var(--font_size_small);
+    font-size: calc(0.8 * var(--font_size));
     margin: 0;
 }
 
@@ -280,7 +275,7 @@ article p {
 
 /* Footer */
 footer {
-    font-size: var(--font_size_medium);
+    font-size: calc(0.9 * var(--font_size));
     padding: 1rem 0;
     margin-top: 1rem;
 }
@@ -297,8 +292,8 @@ footer {
     }
 
     body {
-        --font_size_medium: 3.5vw;
-        --font_size_small: 2.8vw;
+        --font_size: 3.5vw;
+        margin: 0;
     }
 
     main {
@@ -311,8 +306,8 @@ footer {
     }
 
     nav a {
-        font-size: 2.7vw;
         padding: 1rem 0;
+        font-size: 3vw;
     }
 
     #section-one,
@@ -331,24 +326,9 @@ footer {
     }
 
     .right-section {
-        grid-template-columns:  49% 49%;
-        grid-template-rows: 43vw 43vw auto;
+        grid-template-columns:  1fr 1fr;
+        grid-template-rows: 12rem 12rem auto;
         gap: 1vw;
-        grid-row: 1;
-        margin: 0 auto;
-        width: 100%;
-    }
-    
-    .right-section p {
-        font-size: 4.5vw;
-    }
-
-    h2 {
-        font-size: 7vw;
-    }
-
-    h3 {
-        font-size: 4vw;
     }
 
     /* Bottom Section */
@@ -356,56 +336,16 @@ footer {
         grid-template-columns: repeat(3, 33%);
         gap: 1vw;
     }
-
-    #section-one .bottom-section div:first-child {
-        grid-column: 1;
-        grid-row: 1;
-    }
     
     #section-one .bottom-section div:nth-child(3) {
         grid-column: 2 / 4;
         grid-row: 1;
     }
     
-    #section-one .bottom-section div:nth-child(4) {
-        grid-column: 2 / 3;
-        grid-row: 2;
-    }
-    
-    #section-one .bottom-section div:nth-child(5) {
-        grid-column: 3;
-        grid-row: 2;
-     }
-
-     /* Section Two - Bottom Section */
-     #section-two .bottom-section div:first-child {
-        grid-column: 1 / 3;
-        grid-row: 1;
-    }
-    
-    #section-two .bottom-section div:nth-child(2) {
-        grid-column: 3;
-        grid-row: 1;
-    }
-    
-    #section-two .bottom-section div:nth-child(3) {
+     #section-two .bottom-section div:nth-child(3) {
         grid-column: 1 / span 2;
         grid-row: 2;
-    }
-    
-    #section-two .bottom-section div:nth-child(4){
-        grid-column: 3;
-        grid-row: 2;
-    }
-
-    #section-two .bottom-section div:nth-child(3) p,
-    #section-one .bottom-section div:nth-child(4) p {
-        font-size: 3vw;
-    }
-
-    footer {
-        font-size: 3vw;
-    }
+    }   
 }
 
 @media (min-width:800px) and (max-width: 900px) {
@@ -424,33 +364,11 @@ footer {
     nav a {
         font-size: 0.9rem;
     }
-
-    body {
-        --font_size_medium: 0.8rem;
-        --font_size_small: 0.65rem;
-        }
 }
 
 @media (min-width:900px) and (max-width: 1200px) {
-    h1 {
-        font-size: 6.6vw;
-    }
-
-    h2 {
-        font-size: 2.53vw;
-    }
-
-    h3 {
-        font-size: 1.85vw;
-    }
-
-    nav a {
-        font-size: 1.85vw;
-    }
-
     body {
-    --font_size_medium: 1.34vw;
-    --font_size_small: 1.21vw;
+    --font_size: 1.33vw;
     }
 }
 
