--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 body > div {
-    background: url(../Images/background.jpg);
+    background: url(/Images/background\(1\).jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -75,7 +75,7 @@ nav a:nth-child(4):hover {
 nav a:nth-child(2) {
     box-shadow: 0 0 6px 3px rgb(225, 225, 225);   
     border: 1px solid white;
-    font-weight: bold;
+    font-family: "Barlow-Condensed";
 }
 
 section:first-of-type,
@@ -221,7 +221,7 @@ section:first-of-type > div:nth-child(2) div:nth-child(3) {
 }
 
 section:first-of-type > div:nth-child(2) div:nth-child(4) {
-    background: url(./Images/chas-chandler.jpg);
+    background: url(/Images/chas-chandler\(1\).jpg);
     background-size: cover;
     color: white;
 }
@@ -255,7 +255,7 @@ section:last-of-type > div:nth-child(2) div:nth-child(2) {
 }
 
 section:last-of-type > div:nth-child(2) div:nth-child(3) {
-    background: url(../Images/studio.jpg);
+    background: url(/Images/studio\(1\).jpg);
     background-size: cover;
     background-position: top;
     grid-column: 4 / span 2;
@@ -272,7 +272,7 @@ footer {
 @media (width <= 500px) {
     
     body > div {
-        background-image: url(../Images/background-phone.webp);
+        background-image: url(/Images/background-phone\(1\).jpg);
     }
 
     body {
