--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ body > div {
     background: url(/Images/background\(1\).jpg);
     background-size: cover;
     background-position: center;
-    background-repeat: no-repeat;
     position: fixed;
     inset: 0;
     z-index: -1;
@@ -48,7 +47,6 @@ h1 {
 
 nav {
     display: flex;
-    align-items: center;
     gap: 0.3rem;
     margin-bottom: 2rem;
 }
@@ -106,7 +104,7 @@ h2 {
 
 h3 {
     font-family: "Barlow-Condensed";
-    font-size: calc(1.4* var(--font_size));
+    font-size: calc(1.6* var(--font_size));
     margin: 0;
     font-weight: bold;
 }
@@ -199,7 +197,7 @@ section > div:nth-child(2) p {
 
 section:first-of-type > div:nth-child(2) div:nth-child(1),
 section:first-of-type > div:nth-child(2) div:nth-child(3), 
-section:first-of-type > div:nth-child(2) div:nth-child(5)  {
+section:first-of-type > div:nth-child(2) div:nth-child(5) {
     color: rgb(238, 203, 0);
     background-color: rgb(160, 12, 108); 
 }
@@ -227,7 +225,7 @@ section:first-of-type > div:nth-child(2) div:nth-child(4) {
 }
 
 section:first-of-type > div:nth-child(2) div:nth-child(4) ,
-section:last-of-type > div:nth-child(2) div:nth-child(3)  {
+section:last-of-type > div:nth-child(2) div:nth-child(3) {
     color: white;
     border-radius: var(--pointTopLeft);
     display: flex;
@@ -293,11 +291,6 @@ footer {
         padding: 1rem 0;
         font-size: 3vw;
     }
-
-    section:first-of-type,
-    section:last-of-type {
-        justify-content: center;
-    }
     
     /* Upper Section */
     section:first-of-type > div:first-child,
@@ -306,7 +299,6 @@ footer {
     }
 
     article {
-        max-width: 100%;
         margin: 1rem 0;
     }
 
@@ -318,7 +310,7 @@ footer {
 
     /* Bottom Section */
     section > div:nth-child(2) {
-        grid-template-columns: repeat(3, 33%);
+        grid-template-columns: repeat(3, 1fr);
         gap: 1vw;
     }
 
@@ -356,7 +348,7 @@ footer {
 
 @media (width >= 1200px) {
     main {
-        width: 998.4px;
+        width: 960px;
     }
 
     article + div {
