--- a/sidan/style.css
+++ b/sidan/style.css
@@ -280,6 +280,7 @@ footer {
 
     main {
         width: auto;
+        padding: 0 4vw;
     }   
 
     h1 {
@@ -291,11 +292,11 @@ footer {
         padding: 1rem 0;
         font-size: 3vw;
     }
-    
     /* Upper Section */
     section:first-of-type > div:first-child,
     section:last-of-type > div:first-child {
         flex-direction: column-reverse;
+        align-items: center;
     }
 
     article {
@@ -303,9 +304,9 @@ footer {
     } 
 
     article + div {
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 12rem 12rem auto;
-        gap: 1vw;
+        grid-template-columns: 42.5vw 42.5vw;
+        grid-template-rows: 42.5vw 42.5vw auto;
+        gap: 1.5vw;
     }
 
     /* Bottom Section */
